[tool.poetry]
name = "camera"
version = "0.1.0"
description = ""
authors = ["Christian Meter <cmeter@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gphoto2 = "^2.5.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
